--- a/app/src/main/res/layout/article_list.xml
+++ b/app/src/main/res/layout/article_list.xml
@@ -7,6 +7,15 @@
     android:layout_height="match_parent"
     tools:context=".viewController.ArticleList">
 
+    <ListView
+        android:id="@+id/listView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="parent" />
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/addArticle"
         android:layout_width="wrap_content"
