--- a/app/src/main/res/layout/article_list_item.xml
+++ b/app/src/main/res/layout/article_list_item.xml
@@ -4,11 +4,16 @@
     android:layout_width="match_parent"
     android:layout_height="100dp"
     android:orientation="horizontal"
-    android:layout_marginBottom="4dp">
+    android:layout_marginBottom="8dp"
+    android:layout_marginLeft="8dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginRight="8dp">
+
     <ImageView
         android:id="@+id/item_image"
         android:layout_width="100dp"
-        android:layout_height="match_parent" />
+        android:layout_height="100dp"
+        android:layout_marginRight="8dp" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -19,27 +24,26 @@
             android:id="@+id/item_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:text="Titulo"
             android:textColor="@color/colorPrimary"
-            android:textSize="20dp" />
+            android:textSize="18dp" />
 
         <TextView
-            android:id="@+id/item_url"
+            android:id="@+id/item_site"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="google.com"
-            android:textSize="14dp" />
+            android:textSize="12dp" />
 
         <TextView
-            android:id="@+id/item_text"
+            android:id="@+id/item_desc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="4dp"
             android:text="@string/example"
             android:textAlignment="viewStart"
             android:textColor="@color/colorPrimaryDark"
-            android:textSize="14dp" />
+            android:textSize="13dp" />
 
     </LinearLayout>
 </LinearLayout>
