--- a/app/src/main/res/menu/save.xml
+++ b/app/src/main/res/menu/save.xml
@@ -6,5 +6,5 @@
         android:id="@+id/save"
         android:icon="@android:drawable/ic_menu_save"
         android:title="@string/save"
-        app:showAsAction="always|withText" />
+        app:showAsAction="always|always" />
 </menu>
